--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@uirouter/angular-hybrid",
+  "name": "@clarivate/ui-router-angular-hybrid",
   "version": "18.0.0",
   "scripts": {
     "example": "cd example && npm i && npm start",
@@ -19,10 +19,10 @@
   "peerDependencies": {
     "@angular/core": "^14.0.0 || ^15.0.0 || ^16.0.0 || ^17.0.0 || ^18.0.0",
     "@angular/upgrade": "^14.0.0 || ^15.0.0 || ^16.0.0 || ^17.0.0 || ^18.0.0",
-    "@uirouter/angular": "^14.0.0",
-    "@uirouter/angularjs": "^1.0.30",
+    "@clarivate/ui-router-angular": "^14.0.1",
+    "@clarivate/ui-router-angularjs": "^1.1.2",
     "@uirouter/core": "^6.1.0",
-    "angular": "^1.5.0"
+    "@clarivate/angularjs": "1.8.2"
   },
   "resolutions": {
     "@uirouter/core": "^6.1.0"
@@ -38,12 +38,12 @@
     "@angular/upgrade": "^18.0.6",
     "@types/angular": "^1.8.9",
     "@types/jquery": "^3.5.6",
-    "@uirouter/angular": "^14.0.0",
-    "@uirouter/angularjs": "^1.1.0",
+    "@clarivate/ui-router-angular": "^14.0.1",
+    "@clarivate/ui-router-angularjs": "^1.1.2",
     "@uirouter/core": "^6.1.0",
     "@uirouter/publish-scripts": "^2.6.3",
     "@uirouter/rx": "^1.0.0",
-    "angular": "^1.8.3",
+    "@clarivate/angularjs": "1.8.2",
     "husky": "^4.3.8",
     "ng-packagr": "^18.0.0",
     "prettier": "^2.3.2",
